--- a/style.css
+++ b/style.css
@@ -140,3 +140,48 @@ line-height: 22px;
 padding: 15px 0px;
 border-bottom: 2px solid #E4E4E4;
 }
+.contact{
+    display:flex;
+    align-items: center;
+    
+}
+.playmarket{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+.footer_card{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 215px;
+    border: 0.5px solid red;
+    padding: 30px 30px;
+    margin: 50px 0px;
+    background-color: #F6F6F9;
+    border: none;
+}
+
+.text_card{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.text-card{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+.footer_text{
+color: white;
+width: 100%;
+height: 150px;
+padding: 35px 20px;
+border-bottom: 1px solid #133C82;
+    
+}
+.fuuter{
+    background-color: 
+    #295093;
+}
