--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@
     text-decoration: none;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
+body{
+    font-family: 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
+}
 nav{
     width: 100%;
     padding: 40px 0px;
@@ -184,4 +187,34 @@ border-bottom: 1px solid #133C82;
 .fuuter{
     background-color: 
     #295093;
+}
+.menu_bar {
+    display: none;
+    cursor: pointer;
+}
+
+@media (max-width: 330px) {
+    .nav_container {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .icon {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .logo {
+        flex-direction: column;
+        align-items: flex-start;
+        display: none;
+    }
+
+    .logo.active {
+        display: flex;
+    }
+
+    .menu_bar {
+        display: block;
+    }
 }
