--- a/style.css
+++ b/style.css
@@ -4,11 +4,10 @@
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    
 }
-body{
-    font-family: 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
-}
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 nav{
     width: 100%;
     padding: 40px 0px;
@@ -188,13 +187,14 @@ border-bottom: 1px solid #133C82;
     background-color: 
     #295093;
 }
-.menu_bar {
+.menu_bar{
     display: none;
-    cursor: pointer;
 }
 
-@media (max-width: 330px) {
+
+@media (max-width: 380px) {
     .nav_container {
+        display: block;
         flex-direction: column;
         align-items: flex-start;
     }
@@ -216,5 +216,38 @@ border-bottom: 1px solid #133C82;
 
     .menu_bar {
         display: block;
+        font-size: 30px;
+        margin: 10px 0px;
+        display: none;
+    }
+}
+@media (max-width: 450px) {
+    .nav_container {
+        display: block;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .icon {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .logo {
+        flex-direction: column;
+        align-items: flex-start;
+        display: none;
+    }
+
+    .logo.active {
+        display: flex;
+        align-items: center;
+        flex-direction: end;
+        margin: 30px 0px;
+    }
+
+    .menu_bar {
+        display: block;
+        margin: 10px 0px;
     }
 }
