--- a/style.css
+++ b/style.css
@@ -251,9 +251,11 @@ border-bottom: 1px solid #133C82;
         margin: 10px 0px;
     }
 }
-@media (max-width: 400px) {
+@media (max-width: 380px) {
     .link, .stiker, .row, .header_list {
         display: block;
+        width: 100%;
+        margin: 0 auto;
     }
 
     .link_item, .stiker_item, .col-4, .header-list {
